20-deployment-mysql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: h8h-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: h8h-mysql
  template:
    metadata:
      labels:
        app: h8h-mysql
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mysql-volume-claim
      containers:
        - name: h8h-mysql
          image: mysql:8.0.16
          ports:
          - containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
