30-deployment-wordpress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: h8h-wordpress
spec:
  selector:
    matchLabels:
      app: h8h-wordpress
  replicas: 2
  template:
    metadata:
      labels:
        app: h8h-wordpress
        version: "1"
    spec:
      volumes:
        - name: wordpress-data
          persistentVolumeClaim:
            claimName: wordpress-pvc
      containers:
      - name: h8h-wordpress
        image: wordpress:php7.4-apache
        ports:
        - containerPort:  80
        volumeMounts:
          - name:  wordpress-data
            mountPath: /var/www/html
