04-service-mysql.yml
apiVersion: v1
kind: Service
metadata:
  name: h8h-mysql
spec:
  selector:
    app: h8h-mysql
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
