50-service-wordpress.yml
apiVersion: v1
kind: Service
metadata:
  name: h8h-wordpress
spec:
  selector:
    app: h8h-wordpress
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
